UI bug fixes. (#137)
1. Wrap username in item so it doesn't overlap with password
2. Fix ng upgrade bug in add-category
3. Ellipsize blob instead of wrapping since it can be quite large

--- a/src/app/content/components/item/item.component.scss
+++ b/src/app/content/components/item/item.component.scss
@@ -11,6 +11,7 @@ $highlight-color: #fff6d0;
 [ngxClipboard] {
   cursor: pointer;
   line-height: 24px;
+  overflow-wrap: break-word;
 
   &:hover {
     background: darken($highlight-color, 10);
@@ -32,3 +33,10 @@ $highlight-color: #fff6d0;
     }
   }
 }
+    
+.no-overflow {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+  
